samples/_failures_safe/1761090577_52f8d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_88e0af21.c: In function ‘main’:
./samples/SAFE/__tmp_88e0af21.c:154: error: expected ‘{’ at end of input
